# Data_Science_Portfolio

./: _quarto.yml  about.md  cross_validation.qmd  index.md  preferred_colors.ipynb  preferred_colors.qmd  pyproject.toml  styles.css
docs/: about.html  cross_validation.html  index.html  preferred_colors.html  search.json  styles.css
docs/projects/: data-acquisition.html  eda.html  final-project.html  index.html
